# TypePod

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  index.html  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflow/: pytest.yml
.github/workflows/: precommit.yml  pytest.yml  ruff.yml
src/key_event_recorder/: client.py  server.py
tests/: README.md  conftest.py  test_client.py  test_server.py
