[project]
name = "key-event-recorder"
version = "0.1.0"
description = "Data collection tool for keystroke pattern analysis."
authors = [{ name = "Ivan Anishchuk", email = "ivan@agorism.org" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "typer[all]",
    "httpx[http3]",
    "uvicorn[standard,http3]",
    "pydantic",
    "aiofiles",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "anyio",
    "respx", # A utility for mocking out httpx requests in tests
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pylint.main]
max-line-length = 119
disable = ["C0114", "C0115", "C0116", "R0903"] # Disabling docstrings and too-few-public-methods

[tool.pytest.ini_options]
pythonpath = ["src"]
